--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,3 +28,13 @@ application {
     // Define the main class for the application.
     mainClass = 'decide.Decide'
 }
+
+test {
+    useJUnitPlatform()
+
+    maxHeapSize = '1G'
+
+    testLogging {
+        events "passed"
+    }
+}
